...

  return (
    <ThemedView style={GlobalStyles.screenCentered}>
      <ThemedText
        variant="titleLarge"
        style={TEXT.header}
        testID="driver-carbon-title"
      >
        Your Carbon Impact
      </ThemedText>

      <Spacer size={SPACING.xl} />

...
