...
              <View style={{ alignItems: "center", width: "100%" }}>
                <Button
                  mode="contained"
                  onPress={handleExit}
                  style={GlobalStyles.primaryButton}
                  labelStyle={TEXT.primaryButtonLabel}
                  testID="exit-parking-btn"
                >
                  Exit
                </Button>
              </View>
            </Card.Content>
          </Card>
...
