...
            locale="en"
            mode="single"
            visible={showPicker}
            date={date}
            onDismiss={() => setShowPicker(false)}
            onConfirm={handleConfirmDate}
            saveLabel="OK"
            label=" "
          />

          <Spacer height={SPACING.xl} />

          {/* Titles */}
...
